// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Super Campaign/Overview/Detail When not executed renders empty when draft campaign is given: details box without template 1`] = `
<div
  class="SuperCampaignOverviewDetail-section-3"
  data-test="super-campaign-details"
>
  <div
    class="MuiBox-root MuiBox-root-8 SuperCampaignOverviewDetail-title-1"
  >
    <p
      class="MuiTypography-root SuperCampaignCardHeader-title-6 MuiTypography-body1"
    >
      Details
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text SuperCampaignCardHeader-action-7 MuiButton-textPrimary MuiButton-textSizeSmall MuiButton-sizeSmall"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Edit
      </span>
    </button>
  </div>
  <div
    class="SuperCampaignOverviewDetail-labelValue-2"
  >
    <span
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-label-9 MuiTypography-caption"
    >
      Description
    </span>
    <p
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-value-10 MuiTypography-body2"
    >
      -
    </p>
  </div>
</div>
`;

exports[`Super Campaign/Overview/Detail When not executed renders template when there is one: details box template preview 1`] = `
<iframe
  class="MarketingTemplateThumbnail-iframe-52"
  frameborder="0"
  scrolling="no"
  srcdoc="<html><body><div>Hello, World!</body></html>"
  title="Preview"
  width="700px"
/>
`;

exports[`Super Campaign/Overview/Detail When not executed renders template when there is one: details box without template 1`] = `
<div
  class="SuperCampaignOverviewDetail-section-40"
  data-test="super-campaign-details"
>
  <div
    class="MuiBox-root MuiBox-root-45 SuperCampaignOverviewDetail-title-38"
  >
    <p
      class="MuiTypography-root SuperCampaignCardHeader-title-43 MuiTypography-body1"
    >
      Details
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text SuperCampaignCardHeader-action-44 MuiButton-textPrimary MuiButton-textSizeSmall MuiButton-sizeSmall"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Edit
      </span>
    </button>
  </div>
  <div
    class="SuperCampaignOverviewDetail-labelValue-39"
  >
    <span
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-label-46 MuiTypography-caption"
    >
      Description
    </span>
    <p
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-value-47 MuiTypography-body2"
    >
      This is a monthly newsletter that is sent out to Newsletter tag
    </p>
  </div>
</div>
`;
